cabal-version:      3.0
name:               n-step-hs
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Abastro
maintainer:         abab9579@gmail.com
-- copyright:
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
  ghc-options: -Wall

common profiling
  ghc-options: -fprof-auto

library
  import:           warnings
  import:           profiling
  exposed-modules:
    Util
    MultilinPoly
    Inductive

    Chebyshev.Base
    Chebyshev.Linear
    Chebyshev.Fraction
  default-extensions:
    LambdaCase
    OverloadedRecordDot
    NoFieldSelectors
  build-depends:
    base ^>=4.17.1.0,
    containers,
    mtl,
    vector,
    streamly ^>=0.8.3,
    MemoTrie ^>=0.6.11,
    extended-reals ^>=0.2.4.0,
  hs-source-dirs:   src
  default-language: GHC2021

executable n-step-hs
  import:           warnings
  import:           profiling
  main-is:          Main.hs
  -- other-modules:
  default-extensions:
    LambdaCase
    OverloadedRecordDot
    NoFieldSelectors
  build-depends:
    base ^>=4.17.1.0,
    containers,
    mtl,
    vector,
    streamly ^>=0.8.3,
    MemoTrie ^>=0.6.11,
    optparse-applicative ^>=0.18.1.0,
    ansi-terminal ^>=1.0,
    n-step-hs,
  hs-source-dirs:   app
  default-language: GHC2021
  ghc-options:      -O2 -threaded -rtsopts "-with-rtsopts=-N"

test-suite test-n-step
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Test.hs
  build-depends:
    base ^>=4.17.1.0,
    containers,
    mtl,
    vector,
    QuickCheck ^>=2.14.3,
    tasty ^>=1.4.3,
    tasty-quickcheck ^>=0.10.2,
    n-step-hs,
  hs-source-dirs:   test
  default-language: GHC2021

benchmark bench-n-step
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Bench.hs
  build-depends:
    base ^>=4.17.1.0,
    containers,
    mtl,
    vector,
    streamly ^>=0.8.3,
    tasty-bench ^>=0.3.4,
    n-step-hs,
  hs-source-dirs:   bench
  default-language: GHC2021
